profiling-using-exp-runner/backup_FINAL_RESULTS/hanoi_experiment_1/run_0_repetition_0/energibridge.log
sampling interval: 200, target function: tower_of_hanoi, input size: 10
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.hanoi as module; X = 10; module.tower_of_hanoi(X,A,C,B); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.727919296264648 for 0.23239449 sec of execution.
